# MLOps

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  COMMANDS.md  Dockerfile  FILES_CHANGED.md  FINAL_SUMMARY.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INSTALLATION.md  MIGRATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  SETUP_GUIDE.md  STATUS.md  app.py  docker-compose.yml  grafana_dashboard.json  grafana_dashboard.json.bak  grafana_dashboard.json.bak2  prometheus.yml  pyproject.toml  quick_start.py  requirements-dev.txt  requirements.txt  run_pipeline.bat  run_pipeline.sh  setup.sh  test_setup.py  verify_setup.py
.github/: copilot-instructions.md
.github/workflows/: docker-image.yml
docs/: API.md  ARCHITECTURE.md  COMMANDS.md  DEPLOYMENT.md  GETTING_STARTED.md  INDEX.md  INSTALLATION.md  ML_PIPELINE.md  PROJECT_SUMMARY.md  README.md  SETUP_GUIDE.md
grafana/provisioning/dashboards/: dashboard.yml
model_store/: README.md
scripts/: quick_start.py  register_model.py  run_pipeline.bat  run_pipeline.sh  test_setup.py  verify_env.py
src/: app.py  train.py
src/api/: main.py  schemas.py
src/data/: loader.py
src/models/: cnn.py
src/monitoring/: metrics.py
src/training/: train.py
src/utils/: config.py  logger.py
templates/: index.html
tests/: conftest.py
tests/e2e/: test_pipeline.py
tests/integration/: test_api.py
tests/unit/: test_config.py  test_data_loader.py  test_models.py
